--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -70,13 +70,12 @@
     <div class="container">
       <header class="header">Struktur HTML & CSS Flex</header>
       <div class="main-content">
-        <nav class="navigations">
-            <naigition class="navigation"
-        <ul>
+        <nav class="navigation">
+          <ul>
             <li>Link 1</li>
             <li>Link 2</li>
             <li>Link 3</li>
-        </ul>
+          </ul>
         </nav>
         <div class="articles">
           <article class="article">
